--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
     "nodemon": "^2.0.15",
+    "password-validator": "^5.2.1",
     "rand-token": "^1.0.1"
   }
 }
